--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <h1>A Spooky Campfire Story</h1>
+<div id="inputs">
 <input type="text" name="madlibs" value="adjective" />
 <input type="text" name="madlibs" value="noun" />
 <input type="text" name="madlibs" value="place" />
@@ -30,6 +31,9 @@
 <input type="text" name="madlibs" value="adjective" />
 <input type="text" name="madlibs" value="adjective" />
 <input type="text" name="madlibs" value="adjective" />
+</div>
+
+
 <body>
     
 </body>
