--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <h1>A Spooky Campfire Story</h1>
-<div id="inputs">
+<div class="inputs">
 <input type="text" name="madlibs" value="adjective" />
 <input type="text" name="madlibs" value="noun" />
 <input type="text" name="madlibs" value="place" />
